Fix sizing on mobile & various CSS updates

--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ body {
     font-family: 'Cabin', sans-serif;
     font-weight: 400;
     font-size: 1.25em;
-    line-height: 1.5em;
+    line-height: 1.5;
     color: var(--color--text);
 }
 
@@ -97,15 +97,15 @@ h1 {
     font-style: normal;
     font-weight: 800;
     font-size: 3em;
-    line-height: 1em;
-    margin: .25em 0 .5em 0;
+    line-height: 1.5;
+    margin: .25rem 0 .5rem 0;
 }
 
 h2 {
     font-style: normal;
     font-weight: bold;
     font-size: 2em;
-    line-height: 1.5em;
+    line-height: 1.5;
     color: var(--color--text__primary);
     /* margin-bottom: 20px; */
 }
@@ -114,7 +114,7 @@ h3 {
     font-style: normal;
     font-weight: bold;
     font-size: 1.5em;
-    line-height: .5em;
+    line-height: .5;
     margin-bottom: .5rem;
 }
 
@@ -122,7 +122,7 @@ h4 {
     font-style: normal;
     font-weight: 600;
     font-size: 1.25em;
-    line-height: .25em;
+    line-height: .25;
     color: var(--color--primary__light);
 }
 
@@ -167,34 +167,24 @@ Header
     position: relative;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
     clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
-    padding-top: 1.5em;
-    padding-bottom: 5rem;
-
-
+    display: flex;
     padding: 10rem;
-    display: grid;
     justify-content: center;
+    align-items: center;
+}
+
+.header--content {
+    max-width: 24rem;
+    white-space: nowrap;
+}
+
+.typed {
+    display: inline;
 }
 
 .header--left {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 80%);
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 80%);
-}
-
-.header--sideBySide {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-
-    padding-top: 5em;
-}
-
-.header--sideBySide .illustration {
-    max-width: 40%;
-    max-height: auto;
-    margin-left: 6em;
 }
 
 .nextMeeting {
@@ -339,7 +329,6 @@ Content
 .form__label {
     font-size: 1em;
     font-weight: 400;
-    /* font-weight: 700; */
     margin-left: 0px;
     margin-top: 0.2em;
     margin-bottom: 0.5em;
@@ -380,10 +369,18 @@ Content
 /* ----------
 Media Queries
 ---------- */
-@media (max-width: 768px) {
+
+@media (max-width: 64rem) {
     /* h1 {
         height: 120px;
     } */
+
+    .header--content {
+        white-space: normal;
+    }
+
+    .header--welcome {
+    }
 
     hr {
         width: auto;
@@ -393,26 +390,18 @@ Media Queries
         line-height: 1.25em;
     }
 
-    .header {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-content: center;
-        text-align: center;
-        align-items: center;
-
-        min-height: 600px;
+    h3 {
+        line-height: 1;
     }
 
-    .header--sideBySide .illustration {
-        max-width: 100%;
+    h1 {
+        font-size: 2.5em;
+        line-height: 1.125;
     }
 
-    .nextMeeting {
-        justify-content: center;
-        align-content: center;
-        text-align: center;
-        align-items: center;
+    .header--text {
+        /* Weird hack to force the changing text onto second line. */
+        max-width: 5em;
     }
 
     .content {
@@ -449,17 +438,6 @@ Media Queries
     }
 }
 
-@media (max-width: 1370px) {
-    .header--sideBySide {
-        flex-direction: column;
-    }
-
-    .header--sideBySide .illustration {
-        max-height: 60vh;
-        max-width: auto;
-        margin-left: 0;
-    }
-}
 
 /* ----------
 Testing
